--- a/index.css
+++ b/index.css
@@ -1,11 +1,17 @@
 * {
     background-color:#D4D2D5;
     font-family:Courier;
+    box-sizing: border-box;
 }
 
 h1 {
     font-size:48px;
     font-weight:bold;
+    border: 3px solid black;
+    padding: 8px;
+    margin: 10px auto;
+    text-align: center;
+    width: 55%;
 }
 
 h2 {
